--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -29,4 +29,12 @@
         android:text="跳转"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_service_show_dialog"
+        android:textSize="@dimen/size_18sp"
+        android:padding="@dimen/size_10"
+        android:text="Service Dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
