--- a/vincent/src/main/res/values/color.xml
+++ b/vincent/src/main/res/values/color.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="common_color_white">#FFFFFF</color>
     <color name="common_color_gray">#D4D4D4</color>
+
+    <color name="bg_color">#f2f2f2</color>
+    <color name="site_detail_text_color">#ff333333</color>
+    <color name="black">#000000</color>
+    <color name="green">#7fdf2a</color>
+    <color name="white">#ffffff</color>
 </resources>
